@@ -1,42 +1,50 @@
 package broker;
 
+import lombok.Getter;
+import lombok.Setter;
+import org.apache.logging.log4j.LogManager;
 import problem.*;
 
-import java.io.IOException;
 import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
+@Setter
 public class CaseRandom {
 
     private final int nT;
     private int nI;
-    private final int nJ;
-    private final int nK;
-    private final int nN;
-
-    private int nodeID;
+    private int nType = 1;
+    private int nJ;
+    private int nK = -1;
+    private int nN;
 
     private long seed;
     private Random random;
 
     private int mapScale = 10;
-
+    private static final int GRID_NUM = 11;
     private static final double REVENUE_BASE = 500.0;
     private static final double REVENUE_BASE_DAILY = 3000.0;
     private static final double REVENUE_CEIL_DAILY = 4000.0;
 
     private Map<String, List<Integer>> typeRentDay;
     private Map<String, List<Integer>> typeRentMonth;
-    private List<Integer> types;
 
     RMPara para;
 
-    public CaseRandom(int _T, int _I, int _J, int _K, int _N) {
+    @Getter
+    private int nFlex;
+    private int flexMod;
+    private int flexTex;
+    private int flexRmd;
+    private int setupCost;
+    private int switchCost;
+
+    public CaseRandom(int _T, int _I, int _J, int _N) {
         nT = _T;
         nI = _I;
         nJ = _J;
-        nK = _K;
         nN = _N;
         para = new RMPara();
         para.setNTimePeriod(nT);
@@ -44,20 +52,19 @@ public class CaseRandom {
         para.setMaxNumCostSegment(nN);
     }
 
-    public void setSeed(int _seed) {
-        seed = _seed;
+    public void setRentData(RentData data) {
+        typeRentDay = data.typeRentDay;
+        typeRentMonth = data.typeRentMonth;
     }
 
     private void generateRequests(RMProblem problem, int tD) {
         for (int j = 0; j < nJ; j++) {
-            RMCusOrder order = new RMCusOrder(j + 1);
+            RMCusOrder order = new RMFlexible(j + 1);
             int tB = random.nextInt(nT - tD + 1);
             order.setTimeRange(tB, tB + tD);
 
             RMCustomer customer = new RMCustomer(j + 1);
-            RMNode node = randomNode();
-            node.useManhattanDist();
-            customer.setLocation(node);
+            customer.setLocation(randomNode());
 
             order.affiliated(customer);
             customer.addComponent(order);
@@ -74,9 +81,7 @@ public class CaseRandom {
         idxJp.add(nJ);
         for (int p = 0; p < nP; p++) {
             RMCustomer customer = new RMCustomer(p + 1);
-            RMNode node = randomNode();
-            node.useManhattanDist();
-            customer.setLocation(node);
+            customer.setLocation(randomNode());
             List<RMCusOrder> chosen = orders.subList(idxJp.get(p), idxJp.get(p + 1));
             for (RMCusOrder order : chosen) {
                 order.affiliated(customer);
@@ -90,14 +95,14 @@ public class CaseRandom {
     private List<RMCusOrder> generateOrders(List<Integer> types) {
         List<RMCusOrder> orders = new ArrayList<>();
         for (int j = 0; j < types.size(); j++) {
-            RMCusOrder order = new RMCusOrder(j + 1);
+            RMCusOrder order = new RMFlexible(j + 1);
             order.setEquipmentType(types.get(j));
             int[] range = randomDemandTimeWindow();
             order.setTimeRange(range[0], range[1]);
             orders.add(order);
         }
         for (int j = types.size(); j < nJ; j++) {
-            RMCusOrder order = new RMCusOrder(j + 1);
+            RMCusOrder order = new RMFlexible(j + 1);
             order.setEquipmentType(types.get(random.nextInt(types.size())));
             int[] range = randomDemandTimeWindow();
             order.setTimeRange(range[0], range[1]);
@@ -107,10 +112,9 @@ public class CaseRandom {
     }
 
     private RMNode randomNode() {
-        nodeID++;
-        int x = random.nextInt(11) * mapScale;
-        int y = random.nextInt(11) * mapScale;
-        return new RMNode(nodeID, x, y);
+        int x = random.nextInt(GRID_NUM) * mapScale;
+        int y = random.nextInt(GRID_NUM) * mapScale;
+        return new RMNode(x, y, true);
     }
 
     private int[] randomDemandTimeWindow() {
@@ -148,45 +152,34 @@ public class CaseRandom {
         para.setMapScale(_scale);
     }
 
-    public RMSupplier replicateGByDayMonth(int caseIdx) throws IOException {
+    public void setRootNodeEnd() {
+        para.setRootNodeEnd(true);
+    }
+
+    public RMSupplier replicateGByDayMonth(int caseIdx) {
         random = new Random(seed + caseIdx);
         nI = nJ;
 
-        typeRentDay = CaseIO.readRent("./yun/rentByDay.txt");
-        typeRentMonth = CaseIO.readRent("./yun/rentByMonth.txt");
         List<String> typeStrings = new ArrayList<>(typeRentDay.keySet());
         typeStrings = typeStrings.stream().sorted(Comparator.comparingInt(s
-                -> typeRentDay.get(s).size()).reversed()).collect(Collectors.toList()).subList(0, (int) Math.ceil(nJ / 4.0));
+                -> typeRentDay.get(s).size()).reversed()).toList().subList(0, (int) Math.ceil(nJ / 4.0));
 
         // 供应商和设备
-        RMSupplier supplier = new RMSupplier(1);
-        types = new ArrayList<>();
-        for (int i = 0; i < nI; i++) {
-            RMEquipment equip = new RMEquipment(i + 1);
-            equip.affiliated(supplier);
-            String typeString = typeStrings.get(random.nextInt(typeStrings.size()));
-            RMSegmentFunction gsf = generateFunctionsByDayMonthRent(typeString, i + 1);
-            types.add(gsf.getEquipmentType());
-            equip.setRentFunction(gsf);
-            equip.setTimeRange(0, nT);
-            RMNode eNode = randomNode();
-            eNode.useManhattanDist();
-            equip.setLocation(eNode);
-            supplier.addComponent(equip);
-            supplier.addRentFunction(gsf);
-        }
-
-        return supplier;
+        return generateSupplier(typeStrings);
     }
 
-    public RMProblem replicateTDHetero(int caseIdx, int tD) throws IOException {
+    public RMProblem replicateTDHetero(int caseIdx, int tD) {
         RMProblem problem = new RMProblem();
 
         // 问题规模
         problem.setParameter(para);
         RMProblem.setBaseScheduleCost((int) (mapScale * 0.2));
 
-        problem.addSupplier(replicateGByDayMonth(caseIdx));
+        RMSupplier supplier = replicateGByDayMonth(caseIdx);
+        problem.addSupplier(supplier);
+
+        List<Integer> types = new ArrayList<>();
+        supplier.getComponents().forEach(e -> types.add(((RMEquipment) e).getRentFunction().getEquipmentType()));
 
         // 每个订单对应一个客户，订单需求时长固定，同类型
         generateRequests(problem, tD);
@@ -206,7 +199,7 @@ public class CaseRandom {
         return problem;
     }
 
-    public RMProblem replicate1(int caseIdx) throws IOException {
+    public RMProblem replicate1(int caseIdx) {
         random = new Random(seed + caseIdx);
 
         RMProblem problem = new RMProblem();
@@ -216,16 +209,23 @@ public class CaseRandom {
         problem.setParameter(para);
         RMProblem.setBaseScheduleCost((int) (mapScale * 0.2));
 
-        int nTypes = (int) Math.ceil(nI / 4.0);
-        typeRentDay = CaseIO.readRent("./yun/rentByDay.txt");
-        typeRentMonth = CaseIO.readRent("./yun/rentByMonth.txt");
+        nType = (int) Math.ceil(nI / 4.0);
         List<String> typeStrings = new ArrayList<>(typeRentDay.keySet());
         Collections.shuffle(typeStrings, random);
-        typeStrings = typeStrings.subList(0, Math.min(nTypes, 10));
-        types = typeStrings.stream().map(this::translateToInteger).collect(Collectors.toList());
+        typeStrings = typeStrings.subList(0, Math.min(nType, 10));
+        List<Integer> types = typeStrings.stream().map(Tools::translateToInteger).toList();
 
         // 订单
         List<RMCusOrder> orders = generateOrders(types);
+        if (para.isFlexibleTimeWindow()) {
+            flex(orders);
+        }
+        if (setupCost > 0) {
+            orders.forEach(order -> order.setSetupCost(setupCost));
+        }
+        if (switchCost > 0) {
+            orders.forEach(order -> order.setSwitchCost(switchCost));
+        }
         // 客户
         generateCustomers(problem, orders);
         for (RMCustomer customer : problem.getCustomers()) {
@@ -236,29 +236,73 @@ public class CaseRandom {
         }
 
         // 供应商
-        RMSupplier supplier = new RMSupplier(1);
-        for (int i = 0; i < nI; i++) {
-            RMEquipment equip = new RMEquipment(i + 1);
-            equip.affiliated(supplier);
-            String typeString = typeStrings.get(random.nextInt(typeStrings.size()));
-            RMSegmentFunction gsf = generateFunctionsByDayMonthRent(typeString, i + 1);
-            equip.setRentFunction(gsf);
-            equip.setTimeRange(0, nT);
-            RMNode eNode = randomNode();
-            eNode.useManhattanDist();
-            equip.setLocation(eNode);
-            supplier.addComponent(equip);
-            supplier.addRentFunction(gsf);
-        }
-        problem.addSupplier(supplier);
+        problem.addSupplier(generateSupplier(typeStrings));
 
         problem.completeInputInfo();
 
         return problem;
     }
 
+    private void flex(List<RMCusOrder> orders) {
+        nFlex = 0;
+        for (int j = 0; j < orders.size(); j++) {
+            RMCusOrder order = orders.get(j);
+            RMFlexible flex = (RMFlexible) order;
+            flex.setMD(order.getTD());
+            if ((j + 1) % flexMod < flexRmd) {
+                nFlex++;
+                if (flexTex == 1) {
+                    if (order.getTE() < nT) {
+                        flex.setEB(order.getTB());
+                        flex.setLE(order.getTE() + 1);
+                    } else {
+                        flex.setEB(order.getTB() - 1);
+                        flex.setLE(order.getTE());
+                    }
+                } else {
+                    if (nT >= (order.getTD() + 2)) {
+                        if (order.getTE() == nT) {
+                            flex.setEB(order.getTB() - 2);
+                            flex.setLE(nT);
+                        } else if (order.getTB() == 0) {
+                            flex.setEB(0);
+                            flex.setLE(order.getTE() + 2);
+                        } else {
+                            flex.setEB(order.getTB() - 1);
+                            flex.setLE(order.getTE() + 1);
+                        }
+                    } else {
+                        flex.setEB(Math.max(0, order.getTB() - 1));
+                        flex.setLE(Math.min(nT, order.getTE() + 1));
+                        LogManager.getLogger(CaseRandom.class).warn("can not flex J{} mod 2", order.getId());
+                    }
+                }
+            } else {
+                flex.setEB(order.getTB());
+                flex.setLE(order.getTE());
+            }
+        }
+    }
+
+    private RMSupplier generateSupplier(List<String> typeStrings) {
+        RMSupplier supplier = new RMSupplier(1);
+        for (int i = 0; i < nI; i++) {
+            RMEquipment equip = new RMEquipment(i + 1);
+            equip.setIndex(i);
+            equip.affiliated(supplier);
+            String typeString = typeStrings.get(random.nextInt(typeStrings.size()));
+            RMSegmentFunction gsf = generateFunctionsByDayMonthRent(typeString, i + 1);
+            equip.setRentFunction(gsf);
+            equip.setTimeRange(0, nT);
+            equip.setLocation(randomNode());
+            supplier.addComponent(equip);
+            supplier.addRentFunction(gsf);
+        }
+        return supplier;
+    }
+
     private RMSegmentFunction generateFunctionsByDayMonthRent(String typeString, int gID) {
-        int type = translateToInteger(typeString);
+        int type = Tools.translateToInteger(typeString);
         RMSegmentFunction gsf = new RMSegmentFunction(gID, nN, type);
         List<Integer> dayRents = typeRentDay.get(typeString);
         List<Integer> monthRents = typeRentMonth.get(typeString);
@@ -276,21 +320,24 @@ public class CaseRandom {
             alphas[n] = Math.max(alphas[n - 1] - dA, 0);
             betas[n] = dA * breaks[n - 1] + betas[n - 1];
         }
-        IntStream.range(0, breaks.length).forEach(n -> breaks[n] += 0.5);
         gsf.setSlops(alphas);
         gsf.setIntercepts(betas);
         gsf.setBreakPoints(breaks);
         return gsf;
     }
 
-    private int translateToInteger(String s) {
-        String[] seq = s.split("-");
-        int type = 0;
-        for (int i = 0; i < 3; i++) {
-            int v = Integer.parseInt(seq[i].substring(1));
-            type += v * Math.pow(10, 4.0 - i);
+    public void setRevisit(int revisit) {
+        if (revisit == 0) {
+            para.setForbidSplits(true);
+        } else if (revisit > 1) {
+            para.setAllowReVisit(true);
         }
-        type += Integer.parseInt(seq[3].substring(1));
-        return type;
+    }
+
+    public void setFlexible(int tex, int mod, int rmd) {
+        para.setFlexibleTimeWindow(true);
+        flexMod = mod;
+        flexTex = tex;
+        flexRmd = rmd;
     }
 }
